[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "serial-mcp-new"
version = "1.0.0"
description = "MCP server for serial port communication"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "ifindv", email = "ifindv@gmail.com" }
]
keywords = ["mcp", "serial", "serial-port", "hardware", "model-context-protocol"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Hardware :: Hardware Drivers",
]
dependencies = [
    "mcp>=1.6.1",
    "pyserial>=3.5",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.5.0",
    "mypy>=1.0.0",
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[project.urls]
Homepage = "https://github.com/ifindv/serial-mcp"
Documentation = "https://github.com/ifindv/serial-mcp#readme"
Repository = "https://github.com/ifindv/serial-mcp.git"
Issues = "https://github.com/ifindv/serial-mcp/issues"

[project.scripts]
serial-mcp = "serial_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/serial_mcp"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/README.md",
    "/LICENSE",
    "/pyproject.toml",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = []

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]